@@ -104,6 +104,7 @@
               <testSourceDirectory>src/integration-test/java</testSourceDirectory>
               <argLine>-Dlog4j.configuration=file://${basedir}/src/test/resources/log4j-test.properties</argLine>
               <argLine>${jacoco.agent.it.argLine}</argLine>
+              <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
               <!-- Skips integration tests if the value of skip.integration.tests property is true -->
               <skipTests>${skip.integration.tests}</skipTests>
               <includes>
